# Cooperation-In-Scale-Free-Network-and-Regular-Network

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
include/: game_simulation.h  network.h  random_utils.h
scripts/: paint.ipynb  readme.md
src/: Makefile  game_simulation.cpp  main.cpp  network.cpp
